Language terms updates + completed ES glossary

--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_he.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_he.json
@@ -462,6 +462,13 @@
 "menu_zero": "אפס",
 "menu_restore-hints": "שחזור רמזים",
 "menu_language": "שפה",
+"menu_language-en" : "English",
+"menu_language-es" : "Español",
+"menu_language-he" : "עִבְרִית",
+"menu_language-it" : "Italiano",
+"menu_language-ja" : "日本語",
+"menu_language-vi" : "Tiếng Việt",
+"menu_language-zh" : "中文",
 "menu_autosave": "שמירה אוטומטית",
 "menu_advanced": "מתקדם",
 "menu_developer": "מפתחים",
