--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_it.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_it.json
@@ -462,6 +462,13 @@
 "menu_zero" : "Zero",
 "menu_restore-hints" : "Ripristina suggerimenti",
 "menu_language" : "Lingua",
+"menu_language-en" : "English",
+"menu_language-es" : "Español",
+"menu_language-he" : "עִבְרִית",
+"menu_language-it" : "Italiano",
+"menu_language-ja" : "日本語",
+"menu_language-vi" : "Tiếng Việt",
+"menu_language-zh" : "中文",
 "menu_autosave" : "Salvataggio automatico",
 "menu_advanced" : "Avanzate",
 "menu_developer" : "Sviluppatore",
