--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_ja.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_ja.json
@@ -462,6 +462,13 @@
 "menu_zero": "ゼロ",
 "menu_restore-hints": "ヒントを復元",
 "menu_language": "言語",
+"menu_language-en" : "English",
+"menu_language-es" : "Español",
+"menu_language-he" : "עִבְרִית",
+"menu_language-it" : "Italiano",
+"menu_language-ja" : "日本語",
+"menu_language-vi" : "Tiếng Việt",
+"menu_language-zh" : "中文",
 "menu_autosave": "自動保存",
 "menu_advanced": "アドバンスド",
 "menu_developer": "開発者",
