--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -464,12 +464,12 @@
 "menu_restore-hints" : "Restore Hints",
 "menu_language" : "Language",
 "menu_language-en" : "English",
-"menu_language-es" : "Spanish",
-"menu_language-he" : "Hebrew",
-"menu_language-it" : "Italian",
-"menu_language-ja" : "Japanese",
-"menu_language-vi" : "Vietnamese",
-"menu_language-zh" : "Chinese",
+"menu_language-es" : "Español",
+"menu_language-he" : "עִבְרִית",
+"menu_language-it" : "Italiano",
+"menu_language-ja" : "日本語",
+"menu_language-vi" : "Tiếng Việt",
+"menu_language-zh" : "中文",
 "menu_autosave" : "Autosave",
 "menu_advanced" : "Advanced",
 "menu_developer" : "Developer",
