Update glossary IT

--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_it.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_it.json
@@ -30,7 +30,7 @@
 "menu_docs": "Guida utente",
 "menu_about": "Informazioni su Rezonator",
 "menu_track": "Traccia",
-"menu_rez": "Rez",
+"menu_rez": "Risonanza",
 "menu_stack": "Pila",
 "msg_file_audio": "Seleziona file audio (*.ogg)",
 "msg_warning_save-prompt": "Salvare le modifiche prima di chiudere?",
@@ -38,7 +38,7 @@
 "msg_warning_saving": "Salvataggio…",
 "msg_syncplay": "Sincronizzazione audio",
 "menu_user": "Utente",
-"menu_clique": "Raggruppamento",
+"menu_clique": "Cricca",
 "menu_go-to-line": "Vai alla riga",
 "menu_go-to-time": "Vai al minuto",
 "menu_stacker": "Crea Pile",
@@ -53,8 +53,8 @@
 "help_description_delete-link": "Rimuovi dalla Catena",
 "help_description_track": "Crea una Traccia",
 "help_description_stack": "Crea Pila",
-"help_description_clique-tab": "Seleziona scheda Raggruppamento",
-"help_description_quicklink": "Trascina il cursore attarverso diverse parole per creare collegamenti Rez multipli",
+"help_description_clique-tab": "Seleziona scheda ",
+"help_description_quicklink": "Trascina il cursore attarverso diverse parole per creare collegamenti di Risonanza multipli",
 "help_description_quickstack": "Trascina il cursore attraverso i numeri per creare una Pila",
 "help_description_insert-word": "Inserisci una nuova parola",
 "help_description_box": "Seleziona parole per inserirle in un box",
@@ -162,7 +162,7 @@
 "help_label_focus": "Metti a fuoco",
 "help_label_quit": "Esci",
 "help_label_zap": "Elimina",
-"help_label_rez": "Rez",
+"help_label_rez": "Risonanza",
 "help_label_view-select": "Visualizza",
 "help_label_word-format2": "Formattazione parola",
 "help_label_zoom-out": "Riduci",
@@ -216,17 +216,17 @@
 "help_header_play": "Riproduci",
 "help_header_rightClick": "Tasto destro",
 "help_header_advanced": "Impostazioni avanzate",
-"msg_tip_quicklinks": "Trascina il cursore attarverso diverse parole per creare collegamenti Rez multipli",
-"msg_tip_rez-tool": "Clicca su una parola per aggiungerla a una catena Rez",
+"msg_tip_quicklinks": "Trascina il cursore attarverso diverse parole per creare collegamenti Risonanza multipli",
+"msg_tip_rez-tool": "Clicca su una parola per aggiungerla a una catena di Risonanza",
 "msg_tip_track-tool": "Lo strumento Traccia permette di annotare i rapporti di co-referenza",
 "msg_tip_stack-tool": "Clicca su una riga per aggiungerla a una Pila",
 "msg_tip_insert-word": "Clicca per inserire una nuova parola",
 "msg_tip_chunk": "Trascina il cursore su due parole in un riga per creare un Frammento",
 "msg_tip_view-main": "Passa alla visualizzazione principale",
 "msg_tip_view-table": "Passa alla visualizzazione a tabella",
-"msg_warning_read-mode": "Sei in modalità Lettura.# Seleziona lo strumento Traccia o lo srumento Rez #per annotare la conversazione.",
-"msg_tip_tool-select2": "Seleziona uno strumento di annotazione: #Traccia permette di annotare i rapporti di co-referenza tra occorrenze diverse dello stesso referente#Rez permette di tracciare la risonanza tra parole in relazione tra loro",
-"msg_tip_tool-select": "Seleziona una modalità: #Lettura ti permette di esplorare i tuoi dati senza apportare modifiche#Traccia ti permette di annotare i rapporti di co-referenza#Rez ti permette di annotare la risonanza tra parole",
+"msg_warning_read-mode": "Sei in modalità Lettura.# Seleziona lo strumento Traccia o lo srumento Risonanza #per annotare la conversazione.",
+"msg_tip_tool-select2": "Seleziona uno strumento di annotazione: #Traccia permette di annotare i rapporti di co-referenza tra occorrenze diverse dello stesso referente#Risonanza permette di tracciare la risonanza tra parole in relazione tra loro",
+"msg_tip_tool-select": "Seleziona una modalità: #Lettura ti permette di esplorare i tuoi dati senza apportare modifiche#Traccia ti permette di annotare i rapporti di co-referenza#Risonanza ti permette di annotare la risonanza tra parole",
 "msg_tip_keyboard-shortcuts": "Seleziona Aiuto per vedere le scorciatoie da tastiera",
 "msg_warning_autosave": "Salvataggio…",
 "menu_import": "Importa",
@@ -248,7 +248,7 @@
 "search_custom-field": "Inserisci titolo campo personalizzato",
 "search_custom-tag": "Inserisci valore tag personalizzato",
 "search_dialogue_word": "Inserisci valore da trovare",
-"search_dialogue_current-unit": "Nella catena Rez selezionata",
+"search_dialogue_current-unit": "Nella catena di Risonanza selezionata",
 "search_dialogue_case": "Maiuscole\/Minuscole",
 "search_dialogue_transcript": "Cerca nella trascrizione",
 "search_dialogue_regEx": "Abilita espressioni regolari",
@@ -346,10 +346,10 @@
 "help_description_color": "Modifica il colore della Catena selectionata",
 "help_description_delete-plain": "Elimina Catena selezionata",
 "help_description_focus": "Metti a fuoco parola",
-"help_description_rez": "Avvia una nuova catena Rez",
+"help_description_rez": "Avvia una nuova catena di Risonanza",
 "help_description_track2": "Avvia una nuova Traccia",
 "help_description_stack_2": "Avvia una nuova Pila",
-"help_description_clique-tab2": "Passa alla scheda Raggruppamento nella finestra di navigazione",
+"help_description_clique-tab2": "Passa alla scheda Cricca nella finestra di navigazione",
 "warning_import_twice": "Lo stesso file non può essere importato due volte.",
 "msg_import_file_map": "Importa mappatura del file",
 "menu_summary": "Riepilogo",
@@ -360,7 +360,7 @@
 "menu_import_fields": "Importa campi",
 "label_back": "Indietro",
 "msg_warning_clear_stacks": "Stai per eliminare tutte le Pile.",
-"msg_warning_clear_rez": "Stai per eliminare tutte le catene Rez.",
+"msg_warning_clear_rez": "Stai per eliminare tutte le catene di Risonanza.",
 "msg_warning_clear_track": "Stai per eliminare tutte le Tracce.",
 "msg_warning_clear_chains": "Stai per eliminare tutte le Catene.",
 "msg_warning_clear_focused_chain": "Stai per eliminare questa catena.",
@@ -435,7 +435,7 @@
 "menu_delete-all" : "Elimina tutto",
 "menu_track_chains_pl" : "Tracce",
 "menu_stacks_pl" : "Pile",
-"menu_rez_chains_pl" : "Rez",
+"menu_rez_chains_pl" : "Risonanza",
 "menu_chains_pl" : "Catene",
 "menu_window" : "Finestra",
 "menu_nav" : "Navigazione",
