--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_zh.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_zh.json
@@ -478,5 +478,56 @@
 "menu_20-min": "20分钟",
 "menu_30-min": "30分钟",
 "menu_off": "关闭",
-"menu_read": "读取"
+"menu_read": "读取",
+"import_choose_file": "选择导入文件的格式",
+"import_data_type": "文件类型",
+"import_line": "每一行",
+"import_tab": "Tab键",
+"import_whitespace": "空格",
+"import_hyphen": "连字号",
+"import_file_type": "文本",
+"import_type_transcription": "抄本",
+"import_type_elan": "Elan",
+"import_type_song": "诗歌",
+"import_type_prose": "散文",
+"import_type_word": "一字一行",
+"import_type_conllu": "CoNLL-U",
+"import_type_interlinear": "行间注解",
+"import_line_unit": "单元",
+"import_line_paragraph": "段落",
+"import_line_word": "词语",
+"import_line_unitperblock": "字组单元",
+"import_example": "举例",
+"import_continue": "继续",
+"import_warning": "文件含有不在UTF-8编码的字符Rezonator可能缺失字符",
+"import_ok": "好",
+"import_mapping": "导入文件映射",
+"import_mapping_summary": "概要",
+"import_mapping_exceptions": "特例",
+"import_mapping_filename": "文本名： ",
+"import_mapping_token": "记号总数： ",
+"import_mapping_line": "总行数：  ",
+"import_mapping_markers": "找到标记： ",
+"import_mapping_fields": "导入字段",
+"import_mapping_marker": "标记",
+"import_mapping_example": "举例",
+"import_mapping_marker_perc": "%标记",
+"import_mapping_singletoken": "单一记号",
+"import_mapping_tokencount": "记号",
+"import_mapping_level": "层次（模式）",
+"import_mapping_levelpred": "层次（预计）",
+"import_mapping_special": "特殊字段",
+"import_mapping_level_token": "记号",
+"import_mapping_level_discourse": "对话",
+"import_mapping_level_unit": "单元",
+"import_mapping_level_exception": "特例",
+"import_mapping_fields_displaytoken": "显示记号",
+"import_mapping_fields_transcript": "转录",
+"import_mapping_fields_speaker": "扬声器",
+"import_mapping_fields_unitStart": "单元起始",
+"import_mapping_fields_unitEnd": "单元结束",
+"import_mapping_fields_unitDelim": "单元定界符",
+"import_mapping_fields_turnDelim": "旋转定界符",
+"import_mapping_fields_trnaslation": "翻译",
+"import_mapping_selectmessage": "请选择字段作为用于特殊字段的显示标记"
 }
