--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -478,5 +478,56 @@
 "menu_20-min" : "20 minutes",
 "menu_30-min" : "30 minutes",
 "menu_off" : "Off",
-"menu_read" : "Read"
+"menu_read" : "Read",
+"import_choose_file": "Choose a file type to import",
+"import_data_type": "Data type",
+"import_line": "Per line",
+"import_tab": "Tab",
+"import_whitespace": "Whitespace",
+"import_hyphen": "Hyphen",
+"import_file_type": "File",
+"import_type_transcription": "Transcription",
+"import_type_elan": "Elan",
+"import_type_song": "Song & Verse",
+"import_type_prose": "Prose",
+"import_type_word": "One word per line",
+"import_type_conllu": "CoNLL-U",
+"import_type_interlinear": "Interlinear Glossed",
+"import_line_unit": "Unit",
+"import_line_paragraph": "Paragraph",
+"import_line_word": "Word",
+"import_line_unitperblock": "Unit per Block",
+"import_example": "Example",
+"import_continue": "Continue",
+"import_warning": "This file contains characters that are not encoded in UTF-8. Some characters may be missing in Rezonator.",
+"import_ok": "Ok",
+"import_mapping": "Import File Mapping",
+"import_mapping_summary": "Summary",
+"import_mapping_exceptions": "Exceptions",
+"import_mapping_filename": "File name: ",
+"import_mapping_token": "Total token count: ",
+"import_mapping_line": "Total line count: ",
+"import_mapping_markers": "Markers found: ",
+"import_mapping_fields": "Import Fields",
+"import_mapping_marker": "Marker",
+"import_mapping_example": "Example",
+"import_mapping_marker_perc": "Marker %",
+"import_mapping_singletoken": "Single Token",
+"import_mapping_tokencount": "Token Count",
+"import_mapping_level": "Level(Schema)",
+"import_mapping_levelpred": "Level(Predicted)",
+"import_mapping_special": "Special Fields",
+"import_mapping_level_token": "token",
+"import_mapping_level_discourse": "discourse",
+"import_mapping_level_unit": "unit",
+"import_mapping_level_exception": "EXCEPTION",
+"import_mapping_fields_displaytoken": "Display Token",
+"import_mapping_fields_transcript": "Transcript",
+"import_mapping_fields_speaker": "Speaker",
+"import_mapping_fields_unitStart": "Unit Start",
+"import_mapping_fields_unitEnd": "Unit End",
+"import_mapping_fields_unitDelim": "Unit Delimiter",
+"import_mapping_fields_turnDelim": "Turn Delimiter",
+"import_mapping_fields_trnaslation": "Translation",
+"import_mapping_selectmessage": "Please select a field to be the Display Token using the Special Fields section."
 }
