--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_he.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_he.json
@@ -8,6 +8,7 @@
 "menu_view": "תצוגה",
 "menu_search": "חיפוש",
 "menu_filter": "סינון",
+"menu_stack": "ערימה",
 "menu_options": "אפשרויות",
 "menu_sort_pane": "חלונית מיון",
 "msg_elmo_title": "איפה אלמו?",
@@ -30,7 +31,7 @@
 "menu_docs": "מסמכים",
 "menu_about": "אודות",
 "menu_track": "מסלול",
-"menu_rez": "Rez",
+"menu_rez": "תהודה",
 "menu_stack": "ערימה",
 "msg_file_audio": "בחרו קובץ שמע (ogg.*)",
 "msg_warning_save-prompt": "שמור לפני יציאה?",
@@ -54,7 +55,7 @@
 "help_description_track": "יצירת שרשרת מסלול",
 "help_description_stack": "יצירת ערימה",
 "help_description_clique-tab": "בחירת חלון קליקה",
-"help_description_quicklink": "גררו על פני מילים כדי ליצור קשתות Rez רבות",
+"help_description_quicklink": "גררו על פני מילים כדי ליצור קשתות תהודה רבות",
 "help_description_quickstack": "גררו על פני מספרי השורות כדי ליצור ערימה",
 "help_description_insert-word": "הוספת מילה חדשה בסמן",
 "help_description_box": "בחרו מילים למסגר אותן",
@@ -89,7 +90,7 @@
 "help_description_restore-sequence": "שיחזור רצף שורה מקורי",
 "help_description_developer-view": "הפעלת תצוגת פיתוח",
 "help_description_download": "הורדת Rezonator",
-"help_description_rezonator-dot-com": "לכו לRezonator.com למידע",
+"help_description_rezonator-dot-com": "לכו ל Rezonator.com למידע",
 "help_description_replace-word": "החלפת מילה",
 "help_description_restore-word": "שיחזור מילה מקורית",
 "help_description_delete-new-word": "מחיקת מילה שהוספה",
@@ -162,7 +163,7 @@
 "help_label_focus": "מיקוד",
 "help_label_quit": "סיום",
 "help_label_zap": "מחיקה",
-"help_label_rez": "Rez",
+"help_label_rez": "תהודה",
 "help_label_view-select": "תצוגה",
 "help_label_word-format2": "פורמט-מילה",
 "help_label_zoom-out": "הקטנה",
@@ -216,8 +217,8 @@
 "help_header_play": "ניגון",
 "help_header_rightClick": "לחיצה ימנית",
 "help_header_advanced": "מתקדם",
-"msg_tip_quicklinks": "גררו על פני מילים כדי ליצור קשתות Rez רבות",
-"msg_tip_rez-tool": "לחצו על מילה כדי להוסיף אותה לשרשרת Rez",
+"msg_tip_quicklinks": "גררו על פני מילים כדי ליצור קשתות תהודה רבות",
+"msg_tip_rez-tool": "לחצו על מילה כדי להוסיף אותה לשרשרת תהודה",
 "msg_tip_track-tool": "כלי מעקב מסמן התייחסות בין אזכורים של אותו רפרנט",
 "msg_tip_stack-tool": "לחצו על שורה בכדי להוסיף אותה לערימה ",
 "msg_tip_insert-word": "לחצו להוספת מילה חדשה בסמן",
@@ -248,10 +249,10 @@
 "search_custom-field": "הכניסו שם לשדה מותאם אישית",
 "search_custom-tag": "הכניסו שם לתג מותאם אישית",
 "search_dialogue_word": "הכניסו מחרוזת לחיפוש.",
-"search_dialogue_current-unit": "בשרשרת Rez ממוקדת",
-"search_dialogue_case": "תלוי רישיות",
+"search_dialogue_current-unit": "בשרשרת תהודה ממוקדת",
+"search_dialogue_case": "Case Sensitive",
 "search_dialogue_transcript": "חיפוש תמליל",
-"search_dialogue_regEx": "ביטוי רגיל",
+"search_dialogue_regEx": "ביטוי קבוע",
 "msg_new-category": "תנו שם לקטגוריה החדשה של תגים",
 "msg_play": "ניגון",
 "msg_exit": "יציאה",
@@ -303,53 +304,53 @@
 "msg_order-notfound": "לא נמצא סדר תור",
 "key_quit-chain": "[ESC], q",
 "key_delete_link": "[DEL]",
-"key_stack": "k",
-"key_clique": "c",
+"key_stack": "ל",
+"key_clique": "ב",
 "key_delete_chain": "CTRL [DEL]",
-"key_pick": "p",
+"key_pick": "פ",
 "key_filter": "CTRL p",
-"key_go-to-line": "g",
-"msg_no-show": "Don't show again",
+"key_go-to-line": "ע",
+"msg_no-show": "אל תציג שוב",
 "msg_enabled": "הפעלה",
 "msg_disabled": "השבתה",
-"help_description_search": "View main screen or search screen",
-"key_justify": "j",
-"help_description_word-format": "Display words vs. transcriptions",
+"help_description_search": "הצגת חלון ראשי או חלון חיפוש",
+"key_justify": "ח",
+"help_description_word-format": "הצגת מילים מול תמלולים",
 "help_label_columns-narrow": "הצרת עמודה",
-"help_label_decrease_height": "Make lines shorter",
-"help_label_clip": "Export Clip",
-"help_description_clip": "Specify start\/end lines of Save",
-"key_open": "o",
-"key_home": "[HOME]",
-"help_description_home": "Jump to beginning of current line",
-"key_home_alt": "] LEFT ARROW",
-"key_end-of-line": "[END]",
-"help_description_end-of-line": "Jump to end of the current line",
-"key_end-of-line_alt": "] RIGHT ARROW",
+"help_label_decrease_height": "קיצור שורות",
+"help_label_clip": "ייצוא סרטון",
+"help_description_clip": "ציינו התחלת\/סיום שורות שמירה",
+"key_open": "ם",
+"key_home": "[בית]",
+"help_description_home": "מעבר לתחילת השורה הנוכחית",
+"key_home_alt": "] חץ שמאלי",
+"key_end-of-line": "[סיום]",
+"help_description_end-of-line": "מעבר לסוף השורה הנוכחית",
+"key_end-of-line_alt": "] חץ ימני",
 "key_pageup": "[PAGEUP]",
 "key_pagedown": "[PAGEDOWN]",
-"key_start-of-file": "] UP ARROW",
-"help_description_go-first-line": "Jump to first line of conversation",
-"key_end-of-file": "] DOWN ARROW",
-"help_description_end-of-file": "Jump to last line of conversation",
+"key_start-of-file": "] חץ למעלה",
+"help_description_go-first-line": "מעבר לשורה הראשונה של השיחה",
+"key_end-of-file": "] חץ למטה",
+"help_description_end-of-file": "מעבר לשורה האחרונה של השיחה",
 "key_next-pane": "[TAB]",
-"help_label_view-reverse": "Revert to old view",
+"help_label_view-reverse": "חזרה לתצוגה הישנה",
 "key_playAudio": "[SPACEBAR]",
 "key_syncplay": "CTRL [SPACEBAR]",
 "key_shuffle": "] [SHIFT] e",
 "key_developer": "] [SHIFT] d",
-"help_label_delete-inserted-word": "Delete new word",
-"help_description_split": "Split selected word into two seperate words",
-"help_description_insert-word_2": "Adds a new word before or after the selected word",
-"help_description_swap-lines": "Swap this line with another line",
-"help_description_rename": "Change the name of the selected chain",
-"help_description_color": "Change the color of the selected chain",
-"help_description_delete-plain": "Delete selected chain",
-"help_description_focus": "Focus a word (and add to chain)",
-"help_description_rez": "Start a new Rez chain",
-"help_description_track2": "Start a new Track chain",
-"help_description_stack_2": "Start a new Stack chain",
-"help_description_clique-tab2": "Move to Nav window Clique Tab",
+"help_label_delete-inserted-word": "מחיקת מילה חדשה",
+"help_description_split": "פצלו את המילה לשתי מילים נפרדות",
+"help_description_insert-word_2": "הוספת מילה חדשה לפני או אחרי המילה הנבחרת",
+"help_description_swap-lines": "החליפו את השורה הזו עם אחרת",
+"help_description_rename": "שינוי שם לשרשרת הנבחרת",
+"help_description_color": "שינוי צבע לשרשרת הנבחרת",
+"help_description_delete-plain": "מחק את השרשרת הנבחרת",
+"help_description_focus": "מיקוד מילה (והוספה לשרשרת)",
+"help_description_rez": "התחלת שרשרת תהודה חדשה",
+"help_description_track2": "התחלת שרשרת מעקב חדשה",
+"help_description_stack_2": "התחלת ערימת שרשרת חדשה",
+"help_description_clique-tab2": "מעבר לחלון ניווט חלון קליקה",
 "warning_import_twice": "אי אפשר לייבא את אותו קובץ פעמיים",
 "msg_import_file_map": "ייבוא מיפוי קבצים",
 "menu_summary": "סיכום",
@@ -360,7 +361,7 @@
 "menu_import_fields": "ייבוא שדות",
 "label_back": "חזרה",
 "msg_warning_clear_stacks": "אתם עומדים לנקות את כל הערימות.",
-"msg_warning_clear_rez": "אתם עומדים לנקות את כל שרשראות הRez.",
+"msg_warning_clear_rez": "אתם עומדים לנקות את כל שרשראות התהודה.",
 "msg_warning_clear_track": "אתם עומדים לנקות את כל שרשראות המסלול.",
 "msg_warning_clear_chains": "אתם עומדים לנקות את כל השרשראות שלכם.",
 "msg_warning_clear_focused_chain": "אתם עומדים לנקות את השרשרת הזו.",
@@ -368,12 +369,12 @@
 "msg_warning_merge_stacks": "אתם עומדים למזג את שתי הערימות האלו יחד.",
 "msg_warning_merge_chains": "אתם עומדים למזג את שתי השרשראות האלו יחד.",
 "msg_ask_sure": "האם אתם בטוחים?",
-"msg_stacks_created-1": "You have created ",
-"msg_stacks_created-2": " Stacks.\nהאם ברצונך להחליף אותם עם ערימות אוטומטיות חדשות?",
+"msg_stacks_created-1": "יצרת ",
+"msg_stacks_created-2": " ערימות.\nהאם ברצונך להחליף אותם עם ערימות אוטומטיות חדשות?",
 "msg_input_creator": "הכניסו את השם של יוצרי השרשרת.",
 "msg_input_new-string": "הכניסו מחרוזת חדשה להוספת מילים מהירות",
 "msg_input_line_number": "הכניסו את מספר השורה שאיתה תרצו להחליף.",
-"msg_input_split_words": "Input the split words in this format word1, word2",
+"msg_input_split_words": "הכניסו את פיצול המילה בפורמט הבא מילה1, מילה2",
 "msg_input_new-word": "הכניסו את המילה החדשה שתרצו להחליף.",
 "label_split-word": "פיצול מילה",
 "msg_input_add_new-word": "הכניסו את המילה החדשה שתרצו להוסיף.",
@@ -384,20 +385,20 @@
 "msg_input_time-jump": "הכניסו את הזמן אליו תרצו לעבור.",
 "msg_input_line-jump": "הכניסו את השורה אליה תרצו לעבור.",
 "msg_time_search": "חיפוש זמן.",
-"search_beginning-line": "Input beginning or ending line number ",
-"msg_input_regex": "Input Regular expression.",
+"search_beginning-line": "הכניסו את מספר השורה הראשונה או האחרונה ",
+"msg_input_regex": "הכניסו ביטוי קבוע",
 "msg_where-is-elmo_instructions": "איפה אלמו?\n\n לחצו על מילים כדי להוסיף אותן לשרשרת מסלול!\n לחצו [Enter] להגשת התשובה!",
 "msg_elmo_score": "עבודה טובה!\n\n הנה התוצאה שלך: \n",
-"label_option_present": "Present", 
-"label_option_where_elmo": "Where's Elmo", 
+"label_option_present": "הצגה", 
+"label_option_where_elmo": "איפה אלמו", 
 "label_option_rezzles": "Rezzles",
-"msg_cannot_play_rez": "לא ניתן עדיין לשחק בRez עבור מסלולים או ערימות",
+"msg_cannot_play_rez": "לא ניתן עדיין לשחק בתהודה עבור מסלולים או ערימות",
 "msg_no_playback": "אין קישורים להפעלה",
 "msg_end_stackshow": "סיים הצגת ערימה",
 "msg_move_counter": "הזזת מונה: ",
 "msg_time_taken": "זמן נלקח: ",
 "label_reset": "איפוס",
-"label_panelpane_x": "X",
+"label_panelpane_x": "ס",
 "msg_panel_sort_order": " סדר מיון",
 "msg_restore_default": "שיחזור ברירת מחדל",
 "label_search_function": "חיפוש",
@@ -407,18 +408,18 @@
 "label_void": "ביטול: ",
 "label_create_stacks": "יצירת ערימות",
 "label_exceptions": "חריגויות",
-"msg_save_csv": "Choose a Location for the CSV Folder",
-"msg_save_schema_file": "Choose a Location for the Schema file",
-"msg_error_many_numbers": "too many numbers inputed, please input two unique line numbers",
-"msg_error_one_number": "only one number inputed, please input two unique line numbers",
+"msg_save_csv": "בחרו מיקום עבור תיקיית ה CSV",
+"msg_save_schema_file": "בחרו מיקום עבור קובץ הסכימה",
+"msg_error_many_numbers": "הוכנסו יותר מדי מספרים, הכניסו בבקשה שני מספרי שורות שונים",
+"msg_error_one_number": "הוכנס מספר אחד בלבד, הכניסו בבקשה שני מספרי שורות שונים",
 "msg_error_invalid_number": "אחד המספרים לא תקין",
 "msg_error_first_lower": "המספר הראשון חייב להיות קטן יותר מהשני",
-"question_save_before_import": "Would you like to save before importing new data?",
-"question_save_before_exit": "Would you like to save before exiting?",
+"question_save_before_import": "תרצו לשמור לפני ייבוא נתונים חדשים?",
+"question_save_before_exit": "תרצו לשמור לפני יציאה?",
 "label_score": "תוצאה: ",
 "msg_error_type": "שגיאה:",
 "label_mark_exceptions": "סמן חריגויות",
-"label_rezonator_fields": "שדות Rezonator",
+"label_rezonator_fields": "שדות תהודה",
 "label_add_custom_label": "הוספת תווית מותאמת אישית",
 "msg_input_speaker": "הכנסת רמקול: ",
 "label_total_lines_found": "כלל השורות שנמצאו: ",
@@ -428,14 +429,14 @@
 "msg_input_any_number": "הכניסו מספר בבקשה.",
 "msg_select_discourse": "בחירת שיח",
 "msg_specify_line": "ציינו שורה...",
-"msg_open_docs" : " פתיחת תיעוד Rezonator ",
+"msg_open_docs": " פתיחת תיעוד Rezonator ",
 "msg_choose_import": "בחרו קובץ לייבוא",
 "msg_example": "דוגמה",
 "menu_save-as": "שמירה בשם",
 "menu_delete-all": "מחקו הכל",
 "menu_track_chains_pl": "שרשרות מעקב",
 "menu_stacks_pl": "ערימות",
-"menu_rez_chains_pl": "שרשראות Rez",
+"menu_rez_chains_pl": "שרשראות תהודה",
 "menu_chains_pl": "שרשראות",
 "menu_window": "חלון",
 "menu_nav": "ניווט",
@@ -462,13 +463,13 @@
 "menu_zero": "אפס",
 "menu_restore-hints": "שחזור רמזים",
 "menu_language": "שפה",
-"menu_language-en" : "English",
-"menu_language-es" : "Español",
-"menu_language-he" : "עִבְרִית",
-"menu_language-it" : "Italiano",
-"menu_language-ja" : "日本語",
-"menu_language-vi" : "Tiếng Việt",
-"menu_language-zh" : "中文",
+"menu_language-en": "English",
+"menu_language-es": "Español",
+"menu_language-he": "עִבְרִית",
+"menu_language-it": "Italiano",
+"menu_language-ja": "日本語",
+"menu_language-vi": "Tiếng Việt",
+"menu_language-zh": "中文",
 "menu_autosave": "שמירה אוטומטית",
 "menu_advanced": "מתקדם",
 "menu_developer": "מפתחים",
@@ -477,5 +478,56 @@
 "menu_20-min": "20 דקות",
 "menu_30-min": "30 דקות",
 "menu_off": "כיבוי",
-"menu_read": "קריאה"
+"menu_read": "קריאה",
+"import_choose_file": "בחרו קובץ לייבוא",
+"import_data_type": "סוג נתון",
+"import_line": "לכל שורה",
+"import_tab": "חלונית",
+"import_whitespace": "מרחב לבן",
+"import_hyphen": "מקף",
+"import_file_type": "קובץ",
+"import_type_transcription": "תעתיק",
+"import_type_elan": "Elan",
+"import_type_song": "שיר & פסוק",
+"import_type_prose": "טקסט",
+"import_type_word": "מילה אחת בכל שורה",
+"import_type_conllu": "CoNLL-U",
+"import_type_interlinear": "מבריק בין-לינארי",
+"import_line_unit": "יחידה",
+"import_line_paragraph": "פסקה",
+"import_line_word": "מילה",
+"import_line_unitperblock": "יחידה לכל גוש",
+"import_example": "דוגמה",
+"import_continue": "המשך",
+"import_warning": "הקובץ מכיל תווים שאינם מקודדים ב UTF-8. ייתכן שחלק מהתווים יחסרו ב Rezonator.",
+"import_ok": "אישור",
+"import_mapping": "ייבוא מיפוי קבצים",
+"import_mapping_summary": "סיכום",
+"import_mapping_exceptions": "חריגויות",
+"import_mapping_filename": "שם קובץ: ",
+"import_mapping_token": "ספירת אסימונים כוללת: ",
+"import_mapping_line": "מספר שורות כולל: ",
+"import_mapping_markers": "סמנים שנמצאו: ",
+"import_mapping_fields": "ייבוא שדות",
+"import_mapping_marker": "סמן",
+"import_mapping_example": "דוגמה",
+"import_mapping_marker_perc": "% סמן",
+"import_mapping_singletoken": "אסימון יחיד",
+"import_mapping_tokencount": "ספירת אסימונים",
+"import_mapping_level": "רמה(סכימה)",
+"import_mapping_levelpred": "רמה(חיזוי)",
+"import_mapping_special": "שדות מיוחדים",
+"import_mapping_level_token": "אסימון",
+"import_mapping_level_discourse": "שיח",
+"import_mapping_level_unit": "יחידה",
+"import_mapping_level_exception": "חריגה",
+"import_mapping_fields_displaytoken": "הצגת אסימון",
+"import_mapping_fields_transcript": "תמליל",
+"import_mapping_fields_speaker": "דובר",
+"import_mapping_fields_unitStart": "תחילת יחידה",
+"import_mapping_fields_unitEnd": "סוף יחידה",
+"import_mapping_fields_unitDelim": "תיחום יחידה",
+"import_mapping_fields_turnDelim": "הפיכת תיחום",
+"import_mapping_fields_trnaslation": "תרגום",
+"import_mapping_selectmessage": "אנא בחרו שדה להצגת האסימון באמצעות סעיף השדות המיוחדים."
 }
