--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_ja.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_ja.json
@@ -8,6 +8,7 @@
 "menu_view": "表示",
 "menu_search": "検索",
 "menu_filter": "フィルター",
+"menu_stack": "スタック",
 "menu_options": "オプション",
 "menu_sort_pane": "ペインを整列",
 "msg_elmo_title": "エルモはどこ？",
@@ -29,8 +30,8 @@
 "menu_help": "ヘルプ",
 "menu_docs": "ドキュメント",
 "menu_about": "Rezonatorについて",
-"menu_track": "トラック",
-"menu_rez": "Rez",
+"menu_track": "追跡",
+"menu_rez": "共鳴",
 "menu_stack": "スタック",
 "msg_file_audio": "音声ファイルを選択（*.ogg）",
 "msg_warning_save-prompt": "終了する前に保存しますか？",
@@ -38,7 +39,7 @@
 "msg_warning_saving": "保存中…",
 "msg_syncplay": "同期再生",
 "menu_user": "ユーザーx",
-"menu_clique": "派閥",
+"menu_clique": "クリーク",
 "menu_go-to-line": "行に移動",
 "menu_go-to-time": "時間に移動",
 "menu_stacker": "スタックを作成",
@@ -48,13 +49,13 @@
 "menu_prose": "散文",
 "menu_hide": "隠す",
 "menu_zoom": "ズーム",
-"menu_theme": "テーマ",
+"menu_theme": "反転",
 "help_description_link-word": "単語をチェーンに繋げる",
 "help_description_delete-link": "単語をチェーンから取り除く",
-"help_description_track": "トラックチェーンを作成",
+"help_description_track": "追跡チェーンを作成",
 "help_description_stack": "スタックを作成",
-"help_description_clique-tab": "派閥のタブを選択",
-"help_description_quicklink": "単語をドラッグして複数のRezリンクを作成する",
+"help_description_clique-tab": "クリークのタブを選択",
+"help_description_quicklink": "単語をドラッグして複数の共鳴リンクを作成する",
 "help_description_quickstack": "行番号をドラッグしてスタックを作成する",
 "help_description_insert-word": "カーソルに新しい単語を挿入する",
 "help_description_box": "単語を選択してボックス化する",
@@ -110,7 +111,7 @@
 "help_label_link": "リンク",
 "help_label_quit-chain": "チェーンをやめる",
 "help_label_delete-link": "リンクを削除",
-"help_label_track": "トラック",
+"help_label_track": "追跡",
 "help_label_stack": "スタック",
 "help_label_quicklink": "クイックリンク",
 "help_label_quickstack": "クイックスタック",
@@ -126,7 +127,7 @@
 "help_label_transcript": "単語-形式",
 "help_label_wide-columns": "列を広くする",
 "help_label_tall-rows": "行を高くする",
-"help_label_theme": "テーマ",
+"help_label_theme": "反転",
 "help_label_navigation": "ナビゲーション",
 "help_label_open": "開く",
 "help_label_save": "保存",
@@ -162,13 +163,13 @@
 "help_label_focus": "焦点",
 "help_label_quit": "終了",
 "help_label_zap": "削除",
-"help_label_rez": "Rez",
+"help_label_rez": "共鳴",
 "help_label_view-select": "表示",
 "help_label_word-format2": "単語-形式",
 "help_label_zoom-out": "ズームアウト",
 "help_label_zoom-in": "ズームイン",
-"help_label_short": "短い",
-"help_label_tall-rows": "高い",
+"help_label_short": "短く",
+"help_label_tall-rows": "高く",
 "help_label_find": "探す",
 "key_word_click": "[単語をクリック]",
 "key_quit-chain": "[エスケープ]",
@@ -216,17 +217,17 @@
 "help_header_play": "遊ぶ",
 "help_header_rightClick": "右クリック",
 "help_header_advanced": "アドバンスド",
-"msg_tip_quicklinks": "単語をドラッグして複数のRezリンクを作成する",
-"msg_tip_rez-tool": "単語をクリックしてRez chainに追加",
-"msg_tip_track-tool": "トラックツールは同じ指示物の間にある言及の共参照をマークします",
+"msg_tip_quicklinks": "単語をドラッグして複数の共鳴リンクを作成する",
+"msg_tip_rez-tool": "単語をクリックして共鳴チェーンに追加",
+"msg_tip_track-tool": "追跡ツールは同じ指示物の間にある言及の共参照をマークします",
 "msg_tip_stack-tool": "行をクリックしてスタックに追加",
 "msg_tip_insert-word": "クリックしてカーソルに新しい単語を挿入",
 "msg_tip_chunk": "チャンクをマークするには、カーソルをある行の単語二つにドラッグして下さい。",
 "msg_tip_view-main": "表示をメイン画面に変更する",
 "msg_tip_view-table": "表示をテーブル表示に変更する",
-"msg_warning_read-mode": "読み取りモードになっています。＃ディスコースのデータをマークアップするには、＃トラックツールかRezツールを＃選択して下さい。",
-"msg_tip_tool-select2": "マークアップツールを選択する：＃トラック： 同じ指示物の間にある言及の共参照をマークする　＃Rez：関連する単語の共振をマークする",
-"msg_tip_tool-select": "ツールを選択する：＃読み取り：変更を加えずにデータを探索する　＃トラック：共参照の間の言及をマークする　＃Rez：単語の間の共振をマークする",
+"msg_warning_read-mode": "読み取りモードになっています。＃ディスコースのデータをマークアップするには、＃追跡ツールか共鳴ツールを＃選択して下さい。",
+"msg_tip_tool-select2": "マークアップツールを選択する：＃追跡： 同じ指示物の間にある言及の共参照をマークする　＃共鳴：関連する単語の共鳴をマークする",
+"msg_tip_tool-select": "ツールを選択する：＃読み取り：変更を加えずにデータを探索する　＃追跡：共参照の間の言及をマークする　＃共鳴：単語の間の共鳴をマークする",
 "msg_tip_keyboard-shortcuts": "キーボードショートカットを見るにはヘルプを選択",
 "msg_warning_autosave": "保存中…",
 "menu_import": "取り込む",
@@ -248,7 +249,7 @@
 "search_custom-field": "カスタムフィールドの名前を入力",
 "search_custom-tag": "カスタムタグの名前を入力",
 "search_dialogue_word": "検索する文字列を入力。",
-"search_dialogue_current-unit": "焦点が合ったRezチェーンの中",
+"search_dialogue_current-unit": "焦点が合った共鳴チェーンの中",
 "search_dialogue_case": "ケースセンシティブ",
 "search_dialogue_transcript": "文字起こしを検索",
 "search_dialogue_regEx": "正規表現",
@@ -346,10 +347,10 @@
 "help_description_color": "選択されたチェーンの色を変更する",
 "help_description_delete-plain": "選択されたチェーンを削除する",
 "help_description_focus": "ある単語に焦点を合わせる（そしてチェーンに追加する）",
-"help_description_rez": "新しいRezチェーンを開始する",
-"help_description_track2": "新しいトラックチェーンを開始する",
+"help_description_rez": "新しい共鳴チェーンを開始する",
+"help_description_track2": "新しい追跡チェーンを開始する",
 "help_description_stack_2": "新しいスタックチェーンを開始する",
-"help_description_clique-tab2": "ナビゲーションウィンドウの派閥タブへと移動",
+"help_description_clique-tab2": "ナビゲーションウィンドウのクリークタブへと移動",
 "warning_import_twice": "同じファイルを二回取り込むことはできません",
 "msg_import_file_map": "ファイルマッピングを取り込む",
 "menu_summary": "概要",
@@ -360,8 +361,8 @@
 "menu_import_fields": "フィールドを取り込む",
 "label_back": "戻る",
 "msg_warning_clear_stacks": "全てのスタックを消去しようとしています。",
-"msg_warning_clear_rez": "全てのRezチェーンを消去しようとしています。",
-"msg_warning_clear_track": "全てのトラックチェーンを消去しようとしています。",
+"msg_warning_clear_rez": "全ての共鳴チェーンを消去しようとしています。",
+"msg_warning_clear_track": "全ての追跡チェーンを消去しようとしています。",
 "msg_warning_clear_chains": "全てのチェーンを消去しようとしています。",
 "msg_warning_clear_focused_chain": "このチェーンを消去しようとしています。",
 "masg_warning_layer_link": "あるリンクを別のリンクの上に重ねようとしています。",
@@ -386,12 +387,12 @@
 "msg_time_search": "時間検索",
 "search_beginning-line": "行頭の番号か行末の番号を入力する ",
 "msg_input_regex": "正規表現を入力する。",
-"msg_where-is-elmo_instructions": "エルモはどこ？\n\n 単語をクリックしてトラックチェーンに追加しよう！\n [入力] を押してあなたの回答を提出しましょう！",
+"msg_where-is-elmo_instructions": "エルモはどこ？\n\n 単語をクリックして追跡チェーンに追加しよう！\n [入力] を押してあなたの回答を提出しましょう！",
 "msg_elmo_score": "よくできました！\n\n あなたの得点はこちら： \n",
 "label_option_present": "Present", 
 "label_option_where_elmo": "エルモはどこ", 
 "label_option_rezzles": "Rezzles",
-"msg_cannot_play_rez": "トラックとスタックをRez-Playすることはまだ出来ません",
+"msg_cannot_play_rez": "トラックとスタックを共鳴プレイすることはまだ出来ません",
 "msg_no_playback": "再生し返すリンクがありません",
 "msg_end_stackshow": "StackShowを終了する",
 "msg_move_counter": "カウンターを移動： ",
@@ -428,14 +429,14 @@
 "msg_input_any_number": "数字を入力して下さい。",
 "msg_select_discourse": "ディスコースを選択",
 "msg_specify_line": "行を指定...",
-"msg_open_docs" : " RezonatorのDocumentationを開く ",
+"msg_open_docs": " RezonatorのDocumentationを開く ",
 "msg_choose_import": "取り込むファイルの種類を選択して下さい",
 "msg_example": "例",
 "menu_save-as": "名前を付けて保存",
 "menu_delete-all": "全て削除",
-"menu_track_chains_pl": "トラックチェーン",
+"menu_track_chains_pl": "追跡チェーン",
 "menu_stacks_pl": "スタック",
-"menu_rez_chains_pl": "Rezチェーン",
+"menu_rez_chains_pl": "共鳴チェーン",
 "menu_chains_pl": "チェーン",
 "menu_window": "ウィンドウ",
 "menu_nav": "ナビゲーション",
@@ -457,18 +458,18 @@
 "menu_stackshow": "スタックショー",
 "menu_stacker": "スタッカー",
 "menu_settings": "設定",
-"menu_wide": "広い",
-"menu_narrow": "狭い",
+"menu_wide": "広く",
+"menu_narrow": "狭く",
 "menu_zero": "ゼロ",
 "menu_restore-hints": "ヒントを復元",
 "menu_language": "言語",
-"menu_language-en" : "English",
-"menu_language-es" : "Español",
-"menu_language-he" : "עִבְרִית",
-"menu_language-it" : "Italiano",
-"menu_language-ja" : "日本語",
-"menu_language-vi" : "Tiếng Việt",
-"menu_language-zh" : "中文",
+"menu_language-en": "English",
+"menu_language-es": "Español",
+"menu_language-he": "עִבְרִית",
+"menu_language-it": "Italiano",
+"menu_language-ja": "日本語",
+"menu_language-vi": "Tiếng Việt",
+"menu_language-zh": "中文",
 "menu_autosave": "自動保存",
 "menu_advanced": "アドバンスド",
 "menu_developer": "開発者",
@@ -477,5 +478,56 @@
 "menu_20-min": "20分",
 "menu_30-min": "30分",
 "menu_off": "オフ",
-"menu_read": "読む"
+"menu_read": "読む",
+"import_choose_file": "取り込むファイルの種類を選択して下さい",
+"import_data_type": "データの形式",
+"import_line": "行ごとに",
+"import_tab": "タブ",
+"import_whitespace": "空白",
+"import_hyphen": "ハイフン",
+"import_file_type": "ファイル",
+"import_type_transcription": "文字起こし",
+"import_type_elan": "Elan",
+"import_type_song": "歌と詩",
+"import_type_prose": "散文",
+"import_type_word": "1行に1単語",
+"import_type_conllu": "CoNLL-U",
+"import_type_interlinear": "インターリニアグロス",
+"import_line_unit": "ユニット",
+"import_line_paragraph": "段落",
+"import_line_word": "単語",
+"import_line_unitperblock": "ブロックにつきのユニット",
+"import_example": "例",
+"import_continue": "続ける",
+"import_warning": "このファイルには、UTF-8で符号化されていない文字が含まれています。Rezonatorでは一部の文字が欠落している可能性があります。",
+"import_ok": "Ok",
+"import_mapping": "ファイルマッピングを取り込む",
+"import_mapping_summary": "概要",
+"import_mapping_exceptions": "例外",
+"import_mapping_filename": "ファイルの名前： ",
+"import_mapping_token": "トークンの合計数： ",
+"import_mapping_line": "総行数： ",
+"import_mapping_markers": "見つかったマーカー： ",
+"import_mapping_fields": "フィールドを取り込む",
+"import_mapping_marker": "マーカー",
+"import_mapping_example": "例",
+"import_mapping_marker_perc": "マーカー％",
+"import_mapping_singletoken": "シングルトークン",
+"import_mapping_tokencount": "トークン数：",
+"import_mapping_level": "レベル（スキーマ）",
+"import_mapping_levelpred": "レベル（予測）",
+"import_mapping_special": "特別分野",
+"import_mapping_level_token": "トークン",
+"import_mapping_level_discourse": "ディスコース",
+"import_mapping_level_unit": "ユニット",
+"import_mapping_level_exception": "例外",
+"import_mapping_fields_displaytoken": "トークンを表示",
+"import_mapping_fields_transcript": "写本",
+"import_mapping_fields_speaker": "話し手",
+"import_mapping_fields_unitStart": "ユニット開始",
+"import_mapping_fields_unitEnd": "ユニット終了",
+"import_mapping_fields_unitDelim": "ユニット区切り文字",
+"import_mapping_fields_turnDelim": "順番区切り文字",
+"import_mapping_fields_trnaslation": "翻訳",
+"import_mapping_selectmessage": "表示トークンとなる分野を、「特別分野」のセクションから選択して下さい。"
 }
