Italian file updated

--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_it.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_it.json
@@ -8,6 +8,7 @@
 "menu_view": "Visualizza",
 "menu_search": "Trova",
 "menu_filter": "Filtra",
+"menu_stack": "Pila",
 "menu_options": "Preferenze",
 "menu_sort_pane": "Gestisci le finestre",
 "msg_elmo_title": "Dov'è Elmo?",
@@ -30,7 +31,7 @@
 "menu_docs": "Guida utente",
 "menu_about": "Informazioni su Rezonator",
 "menu_track": "Traccia",
-"menu_rez": "Risonanza",
+"menu_rez": "Rez",
 "menu_stack": "Pila",
 "msg_file_audio": "Seleziona file audio (*.ogg)",
 "msg_warning_save-prompt": "Salvare le modifiche prima di chiudere?",
@@ -38,7 +39,7 @@
 "msg_warning_saving": "Salvataggio…",
 "msg_syncplay": "Sincronizzazione audio",
 "menu_user": "Utente",
-"menu_clique": "Cricca",
+"menu_clique": "Raggruppamento",
 "menu_go-to-line": "Vai alla riga",
 "menu_go-to-time": "Vai al minuto",
 "menu_stacker": "Crea Pile",
@@ -53,8 +54,8 @@
 "help_description_delete-link": "Rimuovi dalla Catena",
 "help_description_track": "Crea una Traccia",
 "help_description_stack": "Crea Pila",
-"help_description_clique-tab": "Seleziona scheda ",
-"help_description_quicklink": "Trascina il cursore attarverso diverse parole per creare collegamenti di Risonanza multipli",
+"help_description_clique-tab": "Seleziona scheda Raggruppamento",
+"help_description_quicklink": "Trascina il cursore attarverso diverse parole per creare collegamenti Rez multipli",
 "help_description_quickstack": "Trascina il cursore attraverso i numeri per creare una Pila",
 "help_description_insert-word": "Inserisci una nuova parola",
 "help_description_box": "Seleziona parole per inserirle in un box",
@@ -162,7 +163,7 @@
 "help_label_focus": "Metti a fuoco",
 "help_label_quit": "Esci",
 "help_label_zap": "Elimina",
-"help_label_rez": "Risonanza",
+"help_label_rez": "Rez",
 "help_label_view-select": "Visualizza",
 "help_label_word-format2": "Formattazione parola",
 "help_label_zoom-out": "Riduci",
@@ -216,17 +217,17 @@
 "help_header_play": "Riproduci",
 "help_header_rightClick": "Tasto destro",
 "help_header_advanced": "Impostazioni avanzate",
-"msg_tip_quicklinks": "Trascina il cursore attarverso diverse parole per creare collegamenti Risonanza multipli",
-"msg_tip_rez-tool": "Clicca su una parola per aggiungerla a una catena di Risonanza",
+"msg_tip_quicklinks": "Trascina il cursore attarverso diverse parole per creare collegamenti Rez multipli",
+"msg_tip_rez-tool": "Clicca su una parola per aggiungerla a una catena Rez",
 "msg_tip_track-tool": "Lo strumento Traccia permette di annotare i rapporti di co-referenza",
 "msg_tip_stack-tool": "Clicca su una riga per aggiungerla a una Pila",
 "msg_tip_insert-word": "Clicca per inserire una nuova parola",
 "msg_tip_chunk": "Trascina il cursore su due parole in un riga per creare un Frammento",
 "msg_tip_view-main": "Passa alla visualizzazione principale",
 "msg_tip_view-table": "Passa alla visualizzazione a tabella",
-"msg_warning_read-mode": "Sei in modalità Lettura.# Seleziona lo strumento Traccia o lo srumento Risonanza #per annotare la conversazione.",
-"msg_tip_tool-select2": "Seleziona uno strumento di annotazione: #Traccia permette di annotare i rapporti di co-referenza tra occorrenze diverse dello stesso referente#Risonanza permette di tracciare la risonanza tra parole in relazione tra loro",
-"msg_tip_tool-select": "Seleziona una modalità: #Lettura ti permette di esplorare i tuoi dati senza apportare modifiche#Traccia ti permette di annotare i rapporti di co-referenza#Risonanza ti permette di annotare la risonanza tra parole",
+"msg_warning_read-mode": "Sei in modalità Lettura.# Seleziona lo strumento Traccia o lo srumento Rez #per annotare la conversazione.",
+"msg_tip_tool-select2": "Seleziona uno strumento di annotazione: #Traccia permette di annotare i rapporti di co-referenza tra occorrenze diverse dello stesso referente#Rez permette di tracciare la risonanza tra parole in relazione tra loro",
+"msg_tip_tool-select": "Seleziona una modalità: #Lettura ti permette di esplorare i tuoi dati senza apportare modifiche#Traccia ti permette di annotare i rapporti di co-referenza#Rez ti permette di annotare la risonanza tra parole",
 "msg_tip_keyboard-shortcuts": "Seleziona Aiuto per vedere le scorciatoie da tastiera",
 "msg_warning_autosave": "Salvataggio…",
 "menu_import": "Importa",
@@ -248,8 +249,8 @@
 "search_custom-field": "Inserisci titolo campo personalizzato",
 "search_custom-tag": "Inserisci valore tag personalizzato",
 "search_dialogue_word": "Inserisci valore da trovare",
-"search_dialogue_current-unit": "Nella catena di Risonanza selezionata",
-"search_dialogue_case": "Maiuscole\/Minuscole",
+"search_dialogue_current-unit": "Nella catena Rez selezionata",
+"search_dialogue_case": "Maiuscole\/minuscole",
 "search_dialogue_transcript": "Cerca nella trascrizione",
 "search_dialogue_regEx": "Abilita espressioni regolari",
 "msg_new-category": "Inserisci nome delle nuove categorie di tag",
@@ -346,21 +347,21 @@
 "help_description_color": "Modifica il colore della Catena selectionata",
 "help_description_delete-plain": "Elimina Catena selezionata",
 "help_description_focus": "Metti a fuoco parola",
-"help_description_rez": "Avvia una nuova catena di Risonanza",
+"help_description_rez": "Avvia una nuova catena Rez",
 "help_description_track2": "Avvia una nuova Traccia",
 "help_description_stack_2": "Avvia una nuova Pila",
-"help_description_clique-tab2": "Passa alla scheda Cricca nella finestra di navigazione",
+"help_description_clique-tab2": "Passa alla scheda Raggruppamento nella finestra di navigazione",
 "warning_import_twice": "Lo stesso file non può essere importato due volte.",
 "msg_import_file_map": "Importa mappatura del file",
 "menu_summary": "Riepilogo",
 "label_user_file_name": "Nome file: ",
 "label_total_line": "Totale righe: ",
-"label_markers_found": "Marcatori rilevati: ",
+"label_markers_found": "Trovati i seguenti marcatori: ",
 "msg_continue": "Continua",
 "menu_import_fields": "Importa campi",
 "label_back": "Indietro",
 "msg_warning_clear_stacks": "Stai per eliminare tutte le Pile.",
-"msg_warning_clear_rez": "Stai per eliminare tutte le catene di Risonanza.",
+"msg_warning_clear_rez": "Stai per eliminare tutte le catene Rez.",
 "msg_warning_clear_track": "Stai per eliminare tutte le Tracce.",
 "msg_warning_clear_chains": "Stai per eliminare tutte le Catene.",
 "msg_warning_clear_focused_chain": "Stai per eliminare questa catena.",
@@ -428,54 +429,105 @@
 "msg_input_any_number": "Inserisci un valore numerico",
 "msg_select_discourse": "Seleziona conversazione",
 "msg_specify_line": "Specifica riga conversazione",
-"msg_open_docs" : " Apri la documentazione di Rezonator ",
-"msg_choose_import" : "Scegli il tipo di file da importare",
-"msg_example" : "Esempio",
-"menu_save-as" : "Salva come",
-"menu_delete-all" : "Elimina tutto",
-"menu_track_chains_pl" : "Tracce",
-"menu_stacks_pl" : "Pile",
-"menu_rez_chains_pl" : "Risonanza",
-"menu_chains_pl" : "Catene",
-"menu_window" : "Finestra",
-"menu_nav" : "Navigazione",
-"menu_grid" : "Griglia",
-"menu_left" : "Sinistra",
-"menu_right" : "Destra",
-"menu_tools" : "Strumenti",
-"menu_all" : "Tutto",
-"menu_place" : "Posiziona",
-"menu_above" : "Sopra",
-"menu_between" : "In mezzo",
-"menu_below" : "Sotto",
-"menu_keyboard" : "Tastiera",
-"menu_clear" : "Cancella",
-"menu_turn" : "Turno",
-"menu_sentence" : "Frase",
-"menu_random" : "Random",
-"menu_stacktab" : "Finestra Pile",
-"menu_stackshow" : "Mostra Pile",
-"menu_stacker" : "Impila",
-"menu_settings" : "Impostazioni",
-"menu_wide" : "Allarga",
-"menu_narrow" : "Restringi",
-"menu_zero" : "Zero",
-"menu_restore-hints" : "Ripristina suggerimenti",
-"menu_language" : "Lingua",
-"menu_language-en" : "English",
-"menu_language-es" : "Español",
-"menu_language-he" : "עִבְרִית",
-"menu_language-it" : "Italiano",
-"menu_language-ja" : "日本語",
-"menu_language-vi" : "Tiếng Việt",
-"menu_language-zh" : "中文",
-"menu_autosave" : "Salvataggio automatico",
-"menu_advanced" : "Avanzate",
-"menu_developer" : "Sviluppatore",
-"menu_5-min" : "5 minuti",
-"menu_10-min" : "10 minuti",
-"menu_20-min" : "20 minuti",
-"menu_30-min" : "30 minuti",
-"menu_off" : "Disabilita",
-"menu_read" : "Lettura"
+"msg_open_docs": " Guida di Rezonator ",
+"msg_choose_import": "Seleziona il tipo di file da importare",
+"msg_example": "Esempio",
+"menu_save-as": "Salva come",
+"menu_delete-all": "Cancella tutto",
+"menu_track_chains_pl": "Tracce",
+"menu_stacks_pl": "Pile",
+"menu_rez_chains_pl": "Catene Risonanza",
+"menu_chains_pl": "Catene",
+"menu_window": "Finestra",
+"menu_nav": "Navigazione",
+"menu_grid": "Girglia",
+"menu_left": "Sinistra",
+"menu_right": "Destra",
+"menu_tools": "Strumenti",
+"menu_all": "Tutto",
+"menu_place": "Posiziona",
+"menu_above": "Sopra",
+"menu_between": "In mezzo",
+"menu_below": "Sotto",
+"menu_keyboard": "Tastiera",
+"menu_clear": "Rimuovi",
+"menu_turn": "Turno",
+"menu_sentence": "Periodo",
+"menu_random": "Ordine casuale",
+"menu_stacktab": "Pannelo Pile",
+"menu_stackshow": "Mostra Pila",
+"menu_stacker": "Creatore Pile",
+"menu_settings": "Impostazioni",
+"menu_wide": "Allarga",
+"menu_narrow": "Restringi",
+"menu_zero": "Zero",
+"menu_restore-hints": "Ripristina suggerimenti",
+"menu_language": "Lingua",
+"menu_language-en": "English",
+"menu_language-es": "Español",
+"menu_language-he": "עִבְרִית",
+"menu_language-it": "Italiano",
+"menu_language-ja": "日本語",
+"menu_language-vi": "Tiếng Việt",
+"menu_language-zh": "中文",
+"menu_autosave": "Salvataggio automatico",
+"menu_advanced": "Impostazioni avanzate",
+"menu_developer": "Sviluppatore",
+"menu_5-min": "5 minuti",
+"menu_10-min": "10 minuti",
+"menu_20-min": "20 minuti",
+"menu_30-min": "30 minuti",
+"menu_off": "Disattiva",
+"menu_read": "Modalità lettura",
+"import_choose_file": "Seleziona il tipo di file da importare",
+"import_data_type": "Formato dati",
+"import_line": "Per riga",
+"import_tab": "Tab",
+"import_whitespace": "Spazio",
+"import_hyphen": "Trattino",
+"import_file_type": "File",
+"import_type_transcription": "Trascrizione",
+"import_type_elan": "Elan",
+"import_type_song": "Canzoni e versi",
+"import_type_prose": "Prosa",
+"import_type_word": "Una parola per riga",
+"import_type_conllu": "CoNLL-U",
+"import_type_interlinear": "Glossa interlineare",
+"import_line_unit": "Unità",
+"import_line_paragraph": "Paragrafo",
+"import_line_word": "Parola",
+"import_line_unitperblock": "Unità per blocco",
+"import_example": "Esempio",
+"import_continue": "Continua",
+"import_warning": "Questo file contiene caratteri che non sono codificati in UTF-8 Rezonator potrebbe non supportare alcuni caratteri",
+"import_ok": "OK",
+"import_mapping": "Importa mappatura del file",
+"import_mapping_summary": "Riepilogo",
+"import_mapping_exceptions": "Eccezioni",
+"import_mapping_filename": "Nome file: ",
+"import_mapping_token": "Totale token: ",
+"import_mapping_line": "Totale righe: ",
+"import_mapping_markers": "Trovati i seguenti marcatori: ",
+"import_mapping_fields": "Importa campi",
+"import_mapping_marker": "Marcatore",
+"import_mapping_example": "Esempio",
+"import_mapping_marker_perc": "Marcatore %",
+"import_mapping_singletoken": "Token singolo",
+"import_mapping_tokencount": "Totale token",
+"import_mapping_level": "Livello (Schema)",
+"import_mapping_levelpred": "Livello anticipato",
+"import_mapping_special": "Campi speciali",
+"import_mapping_level_token": "token",
+"import_mapping_level_discourse": "discorso",
+"import_mapping_level_unit": "unità",
+"import_mapping_level_exception": "ECCEZIONI",
+"import_mapping_fields_displaytoken": "Token da visualizzare",
+"import_mapping_fields_transcript": "Trascrizione",
+"import_mapping_fields_speaker": "Parlante",
+"import_mapping_fields_unitStart": "Inizion unità",
+"import_mapping_fields_unitEnd": "Fine unità",
+"import_mapping_fields_unitDelim": "Delimitatore unità",
+"import_mapping_fields_turnDelim": "Delimitatore turno",
+"import_mapping_fields_trnaslation": "Traduzione",
+"import_mapping_selectmessage": "Selezionare il campo del token "
 }
